# badgick

./: CH58Xxx.svd  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml  toolchain.toml
.cargo/: config.toml
ch58x/: CH58Xxx.svd  CH58Xxx.svd.patch  CH58Xxx.svd.patched  CH58Xxx.yml  Cargo.toml  build.rs  device.x  generate.sh  memory.x
ch58x-hal/: Cargo.toml
ch58x-pac/: CH58Xxx.svd  CH58Xxx.svd.patch  CH58Xxx.svd.patched  Cargo.toml  device.x
ch58x-pac/src/: lib.rs
ch58x/src/: critical_section.rs  generated.rs  generic.rs  lib.rs
ch58x/src/register/: intsyscr.rs  mod.rs
src/: gpio.rs  main.rs  pfic.rs  sys.rs  sysclk.rs
