[workspace]
resolver = "3"
members = ["ch58x"]

[package]
name = "badgick"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = { version = "0.14", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.15", features = ["device", "memory", "v-trap"] }

ch58x = { path = "ch58x" }

embassy-executor = { version = "0.8", features = ["arch-riscv32", "executor-thread"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
