[workspace]
resolver = "3"
members = ["ch58x"]

[package]
name = "badgick"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2"
riscv = "0.14"
riscv-rt = "0.15"
ch58x = { path = "ch58x", features = ["critical-section", "rt", "v-trap"] }
fugit = "0.3"

embedded-hal = "1.0"

embassy-executor = { version = "0.8", features = ["arch-riscv32", "executor-thread"] }
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.2"
embassy-sync = "0.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
riscv = { git = "https://github.com/rust-embedded/riscv.git" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv.git" }
